--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.2.1",
     "sass": "^1.62.0",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
