--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.2",
+    "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "country-state-city": "^3.1.4",
+    "dayjs": "^1.11.7",
     "material-ui-phone-number": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
