--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "country-state-city": "^3.1.4",
     "dayjs": "^1.11.7",
     "material-ui-phone-number": "^3.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
