--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "country-state-city": "^3.1.4",
+    "dateformat": "^5.0.3",
     "dayjs": "^1.11.7",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
